TM-11214 Fix overflow issue on actions buttons

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -28,6 +28,7 @@
   .prop .valueNW
     text-align: left
     padding-left: 5px
+    width: 130px
   .prop .bundle
     text-align: left
     width: 50%
@@ -251,8 +252,9 @@
       padding: 0
 
   #commentListId
-    .k-grid
-      border-width: 0
+    table
+      td
+        padding: unset
 .url-field
   text-overflow: ellipsis
   overflow: hidden
